syntax = "proto3";

option go_package = "cse224/proj4/pkg/surfstore";

package surfstore;

import "google/protobuf/empty.proto";

service BlockStore {
    rpc GetBlock (BlockHash) returns (Block) {}

    rpc PutBlock (Block) returns (Success) {}

    rpc HasBlocks (BlockHashes) returns (BlockHashes) {}

    rpc GetBlockHashes (google.protobuf.Empty) returns (BlockHashes) {}
}

service MetaStore {
    rpc GetFileInfoMap(google.protobuf.Empty) returns (FileInfoMap) {}

    rpc UpdateFile(FileMetaData) returns (Version) {}

    rpc GetBlockStoreMap(BlockHashes) returns (BlockStoreMap) {}

    rpc GetBlockStoreAddrs(google.protobuf.Empty) returns (BlockStoreAddrs) {}
}

message BlockHash {
    string hash = 1;
}

message BlockHashes {
    repeated string hashes = 1;
}

message Block {
    bytes blockData = 1;
    int32 blockSize = 2;
}

message Success {
    bool flag = 1;
}

message FileMetaData {
    string filename = 1;
    int32 version = 2;
    repeated string blockHashList = 3;
}

message FileInfoMap {
    map<string, FileMetaData> fileInfoMap = 1;
}

message Version {
    int32 version = 1;
}

message BlockStoreMap {
    map<string, BlockHashes> blockStoreMap = 1;
}

message BlockStoreAddrs {
    repeated string blockStoreAddrs = 1;
}